okd-services/services/argocd/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
spec:
  host: argocd.apps.okd.cgraaaj.in
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
